--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
   "devDependencies": {
     "protractor": "^5.4.2",
     "https-proxy-agent": "latest",
-    "chai": "^4.2.0"
+    "chai": "^4.2.0",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-istanbul": "^4.1.6",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.26.0"
   },
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-node6": "^11.0.0",
     "update": "^0.7.4",
     "webdriver-manager": "^12.1.7"
   }
